--- a/src/Number.css
+++ b/src/Number.css
@@ -2,8 +2,8 @@
   display: inline-block;
   background-color: lightskyblue;
   padding: 1rem;
-  width: 50px;
-  height: 50px;
+  width: 2rem;
+  height: 2rem;
   border-radius: 50%;
   margin: 1rem 1rem;
 }
@@ -11,4 +11,10 @@
 .number:hover {
   cursor: pointer;
   transform: scale(1.1);
+}
+
+.number-inactive {
+  pointer-events: none;
+  opacity: 0;
+  transition: 1s ease;
 }
