--- a/src/number/Number.css
+++ b/src/number/Number.css
@@ -1,6 +1,6 @@
 .number {
   display: inline-block;
-  font-size: 3rem;
+  font-size: 5vw;
   margin: 2rem 2rem;
   text-shadow: 0.1rem 0.1rem black;
 }
