--- a/src/game/Game.css
+++ b/src/game/Game.css
@@ -1,4 +1,29 @@
-#game {
+.Game-container {
   border: 0.4rem solid white;
   border-radius: 2rem;
+  max-width: 500px;
+  margin: auto;
+  padding: 1rem;
+}
+
+.try-again {
+  position: absolute;
+  background-color: red;
+  opacity: 0;
+  transition: 0.3s ease-in-out;
+  padding: 0 0.5rem;
+  border-radius: 0.5rem;
+  z-index: -10;
+}
+
+.show {
+  opacity: 1;
+  z-index: 10;
+}
+
+.winner {
+  transition: 0.3s ease-in-out;
+  background-color: red;
+  padding: 0.5rem 0.5rem;
+  border-radius: 0.5rem;
 }
