--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,6 @@
-.App {
-  text-align: center;
-}
-
 body {
   color: white;
+  font-size: 20px;
   background-color: lightskyblue;
   font-family: "Balsamiq Sans", cursive;
 }
