--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,12 @@
 body {
   color: white;
   font-size: 20px;
-  background-color: #85ceeb;
+  background-color: skyblue;
   font-family: "Balsamiq Sans", cursive;
+}
+
+.App {
+  overflow: hidden;
 }
 
 button:focus {
@@ -22,6 +26,8 @@ button:focus {
 .navbar-brand {
   color: white !important;
   font-size: 1.3rem;
+  display: block;
+  padding: 0.5rem 1rem;
 }
 
 .nav-link:hover,
