--- a/src/game/Game.css
+++ b/src/game/Game.css
@@ -1,10 +1,19 @@
 .Game-container {
-  border: 0.4rem solid white;
-  border-radius: 2rem;
-  max-width: 500px;
+  border: 1.5rem solid #6c3740;
+  background-image: linear-gradient(#608c7b, #347369);
+  max-width: 600px;
+  min-height: 400px;
   margin: auto;
-  padding: 1rem;
+  box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.5);
+}
+
+.Game {
   text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+  min-height: 400px;
 }
 
 .try-again {
@@ -27,4 +36,12 @@
   background-color: red;
   padding: 0.5rem 0.5rem;
   border-radius: 0.5rem;
+}
+
+.beverly-img {
+  position: absolute;
+  z-index: 10;
+  max-height: 500px;
+  left: 70%;
+  top: 4rem;
 }
