--- a/src/number/Number.css
+++ b/src/number/Number.css
@@ -1,7 +1,6 @@
 .Number {
-  display: inline-block;
-  font-size: 3rem;
-  margin: 1rem 1.5rem;
+  font-size: 4rem;
+  width: 30%;
   text-shadow: 0.1rem 0.1rem black;
 }
 
