--- a/src/showcase/Showcase.css
+++ b/src/showcase/Showcase.css
@@ -1,25 +1,15 @@
 .Showcase {
-  margin: 6rem auto;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
 .Showcase-book {
+  max-width: 60%;
   box-shadow: 0px 0px 30px rgb(0, 0, 0, 0.5);
-}
-
-.Showcase-buy {
-  margin: auto;
 }
 
 .Showcase-description {
   text-align: center;
   margin: 1rem 2rem;
-}
-
-.Showcase-out {
-  background-color: red;
-  position: absolute;
-  top: 7%;
-  left: 35%;
-  padding: 1rem;
-  border-radius: 1rem;
 }
