--- a/src/activities/Activities.css
+++ b/src/activities/Activities.css
@@ -1,12 +1,13 @@
 .Activities {
-  margin: 6rem auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .Activity-preview {
-  display: block;
   height: 250px;
   width: 250px;
   border-radius: 50%;
   background-color: white;
-  margin: 1rem auto;
+  margin: 2rem;
 }
