--- a/src/game/Game.css
+++ b/src/game/Game.css
@@ -22,7 +22,6 @@
   border: 1rem solid #6c3740;
   background-image: linear-gradient(#608c7b, #347369);
   width: 85%;
-  height: fit-content;
   min-height: 248px;
   box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.5);
 }
@@ -33,23 +32,26 @@
   flex-wrap: wrap;
   justify-content: space-around;
   align-items: center;
+  font-family: "Love Ya Like A Sister", cursive;
 }
 
 .Game-description {
   text-align: center;
-  margin: 4rem;
-  font-size: 1.5rem;
+  margin: 0;
+  font-size: 1.8rem;
   letter-spacing: 0.05rem;
+  font-weight: 400;
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
 }
 
 .try-again {
   position: absolute;
   background-color: red;
+  text-shadow: 0.1rem 0.1rem rgba(0, 0, 0, 0.7);
   opacity: 0;
   transition: 0.3s ease-in-out;
-  padding: 0 0.5rem;
-  border-radius: 0.5rem;
   z-index: -10;
+  width: auto;
 }
 
 .show {
@@ -66,8 +68,14 @@
 
 .beverly-img {
   position: absolute;
-  z-index: 10;
+  z-index: 20;
   max-height: 100%;
   left: 74%;
   top: 6rem;
+}
+
+@media (min-width: 576px) {
+  .Game-description {
+    margin: 4rem;
+  }
 }
