--- a/src/number/Number.css
+++ b/src/number/Number.css
@@ -1,7 +1,8 @@
 .Number {
-  font-size: 4vmax;
-  width: 33.33%;
-  text-shadow: 0.1rem 0.1rem black;
+  font-size: 5vmax;
+  width: 33%;
+  text-shadow: 0.1rem 0.1rem rgba(0, 0, 0, 0.7);
+  font-family: "Love Ya Like A Sister", cursive;
 }
 
 .Number:hover {
