--- a/src/game/Game.css
+++ b/src/game/Game.css
@@ -22,11 +22,13 @@
   border: 1rem solid #6c3740;
   background-image: linear-gradient(#608c7b, #347369);
   width: 85%;
+  height: 100%;
   min-height: 248px;
   box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.5);
 }
 
 .Game {
+  height: 100%;
   text-align: center;
   display: flex;
   flex-wrap: wrap;
@@ -60,8 +62,8 @@
 }
 
 .winner {
+  font-size: 5vmax;
   transition: 0.3s ease-in-out;
-  background-color: red;
   padding: 0.5rem 0.5rem;
   border-radius: 0.5rem;
 }
