--- a/src/game/Game.css
+++ b/src/game/Game.css
@@ -20,15 +20,16 @@
 
 .Game-container {
   border: 1rem solid #6c3740;
-  background-image: linear-gradient(#608c7b, #347369);
+  background-color: #347369;
+  /* background-image: linear-gradient(#608c7b, #347369); */
   width: 85%;
-  height: 100%;
   min-height: 248px;
   box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.5);
 }
 
 .Game {
-  height: 100%;
+  font-size: 5vmax;
+  text-shadow: 0.1rem 0.1rem rgba(0, 0, 0, 0.7);
   text-align: center;
   display: flex;
   flex-wrap: wrap;
@@ -48,24 +49,25 @@
 
 .try-again {
   position: absolute;
-  background-color: red;
+  background-color: #347369;
+  width: 70%;
   text-shadow: 0.1rem 0.1rem rgba(0, 0, 0, 0.7);
   opacity: 0;
   transition: 0.3s ease-in-out;
   z-index: -10;
-  width: auto;
+}
+
+.winner {
+  position: absolute;
+  font-size: 5vmax;
+  transition: 0.3s ease-in-out;
+  opacity: 0;
+  z-index: -10;
 }
 
 .show {
   opacity: 1;
   z-index: 10;
-}
-
-.winner {
-  font-size: 5vmax;
-  transition: 0.3s ease-in-out;
-  padding: 0.5rem 0.5rem;
-  border-radius: 0.5rem;
 }
 
 .beverly-img {
