--- a/src/game/Game.css
+++ b/src/game/Game.css
@@ -21,7 +21,6 @@
 .Game-container {
   border: 1rem solid #6c3740;
   background-color: #347369;
-  /* background-image: linear-gradient(#608c7b, #347369); */
   width: 85%;
   min-height: 248px;
   box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.5);
@@ -40,7 +39,7 @@
 
 .Game-description {
   text-align: center;
-  margin: 0;
+  margin: 2rem;
   font-size: 1.8rem;
   letter-spacing: 0.05rem;
   font-weight: 400;
@@ -49,20 +48,31 @@
 
 .try-again {
   position: absolute;
-  background-color: #347369;
-  width: 70%;
+  background-color: #c5243a;
   text-shadow: 0.1rem 0.1rem rgba(0, 0, 0, 0.7);
   opacity: 0;
-  transition: 0.3s ease-in-out;
   z-index: -10;
+  padding: 0 5%;
+  transition: 0.2s ease-in-out;
+  border-radius: 1rem;
 }
 
 .winner {
   position: absolute;
   font-size: 5vmax;
-  transition: 0.3s ease-in-out;
   opacity: 0;
   z-index: -10;
+}
+
+.winner button {
+  color: #fff;
+  background-color: #c5243a;
+  padding: 0 5%;
+  border-radius: 1rem;
+  font-size: 3vmax;
+  text-shadow: 0.1rem 0.1rem rgba(0, 0, 0, 0.7);
+  border: none;
+  cursor: pointer;
 }
 
 .show {
