--- a/src/game/Game.css
+++ b/src/game/Game.css
@@ -1,5 +1,5 @@
 .Game-content::before {
-  background-image: url("./separator-game.png");
+  background-image: url("./separator-alt.png");
   background-repeat: repeat-x;
   content: "";
   position: absolute;
@@ -40,9 +40,6 @@
 .Game-description {
   text-align: center;
   margin: 2rem;
-  font-size: 1.8rem;
-  letter-spacing: 0.05rem;
-  font-weight: 400;
   text-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
 }
 
