--- a/src/app/App.css
+++ b/src/app/App.css
@@ -7,6 +7,22 @@ button:focus {
   outline: none;
 }
 
+.button {
+  color: #fff;
+  font-size: 1.2rem;
+  background-color: #eb6979;
+  padding: 1rem 2rem;
+  border-radius: 2rem;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
+.button:hover {
+  color: #fff;
+  text-decoration: none;
+  background-color: #e45465;
+}
+
 .App {
   overflow: hidden;
   font-size: 1.5rem;
