--- a/src/app/App.css
+++ b/src/app/App.css
@@ -9,7 +9,9 @@ button:focus {
 
 .button {
   color: #fff;
-  font-size: 1.2rem;
+  font-family: "Balsamiq Sans", cursive;
+  font-size: 1rem;
+  font-weight: 400;
   background-color: #eb6979;
   padding: 1rem 2rem;
   border-radius: 2rem;
@@ -51,7 +53,7 @@ button:focus {
 
 .nav-link {
   color: rgba(0, 0, 0, 0.8) !important;
-  font-size: 1.6rem;
+  font-size: 1.5rem;
   letter-spacing: 0.07rem;
   display: block;
   padding: 0.5rem 1rem;
