--- a/src/books/Books.css
+++ b/src/books/Books.css
@@ -34,3 +34,12 @@
   line-height: 1;
   font-family: "Londrina Solid", cursive;
 }
+
+.Book-info {
+  font-size: 1.2rem;
+  list-style: none;
+}
+
+.Book-description {
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
+}
