--- a/src/books/Books.css
+++ b/src/books/Books.css
@@ -43,3 +43,28 @@
 .Book-description {
   text-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
 }
+
+.Book-links {
+  opacity: 0;
+  margin-top: -40px;
+  list-style: none;
+  padding: 0;
+  font-family: "Balsamiq Sans", cursive;
+}
+
+.Book-links a {
+  color: #fff;
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
+}
+
+.Book-links a:hover {
+  text-decoration: none;
+  color: #1c597c;
+  text-shadow: none;
+}
+
+.show {
+  opacity: 1;
+  transform: translateY(20px);
+  transition: transform 0.2s ease-in-out;
+}
