--- a/src/app/App.css
+++ b/src/app/App.css
@@ -69,12 +69,14 @@ button:focus {
 
 .page-header {
   color: rgba(0, 0, 0, 0.8);
-  font-size: 6.5rem;
+  font-size: 5rem;
   animation: pop 0.5s;
   text-align: center;
   font-family: "Londrina Solid", cursive;
   text-shadow: 0 5px 3px rgba(0, 0, 0, 0.15);
   line-height: 0.9;
+  margin-top: 3rem;
+  margin-bottom: 6rem;
 }
 
 .page-header span,
@@ -85,4 +87,34 @@ button:focus {
 
 .page-title {
   margin: 3rem auto;
+}
+
+/* Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) {
+  .page-header {
+    margin-top: 4rem;
+    margin-bottom: 10rem;
+  }
+}
+
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) {
+  .page-header {
+    font-size: 6rem;
+    margin-top: 4rem;
+    margin-bottom: 12rem;
+  }
+}
+
+/* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) {
+  .page-header {
+    font-size: 8rem;
+    margin-top: 5rem;
+    margin-bottom: 15rem;
+  }
+}
+
+/* Extra large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {
 }
