--- a/src/game/Game.css
+++ b/src/game/Game.css
@@ -20,8 +20,8 @@
 }
 
 .Game {
-  font-size: 5vmax;
   border: 1rem solid #6c3740;
+  font-size: 3rem;
   background-color: #347369;
   min-height: 248px;
   box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.5);
@@ -54,7 +54,7 @@
 
 .winner {
   position: absolute;
-  font-size: 5vmax;
+  font-size: 3rem;
   opacity: 0;
   z-index: -10;
 }
@@ -64,7 +64,7 @@
   background-color: #c5243a;
   padding: 0 5%;
   border-radius: 1rem;
-  font-size: 3vmax;
+  font-size: 2rem;
   text-shadow: 0.1rem 0.1rem rgba(0, 0, 0, 0.7);
   border: none;
   cursor: pointer;
@@ -80,15 +80,23 @@
   z-index: 20;
   max-height: 100%;
   left: 80%;
-  top: 8rem;
+  top: 6rem;
+}
+
+.class-img {
+  position: absolute;
+  z-index: 20;
+  max-height: 85%;
+  left: 0.4%;
+  top: 9rem;
 }
 
 .Game-footer::before {
   background-image: url("./zowen-charts.png");
   background-repeat: repeat-x;
   background-position: center;
-  content: "";
   background-size: auto 10rem;
+  content: "";
   position: absolute;
   margin-top: -8rem;
   height: 10rem;
@@ -96,7 +104,7 @@
 }
 
 .Game-footer {
-  margin-top: 17.5rem;
+  margin-top: 16.5rem;
   background-color: #f3f3f3;
 }
 
@@ -129,7 +137,7 @@
     height: 12rem;
   }
   .Game-footer {
-    margin-top: 19rem;
+    margin-top: 18.5rem;
   }
 }
 
@@ -149,7 +157,7 @@
     height: 15rem;
   }
   .Game-footer {
-    margin-top: 23rem;
+    margin-top: 21rem;
   }
 }
 
@@ -160,12 +168,16 @@
     margin-top: -9.95rem;
     height: 10rem;
   }
+  .class-img {
+    left: -10%;
+    top: 13rem;
+  }
   .Game-footer::before {
     background-size: auto 20rem;
     margin-top: -17rem;
     height: 20rem;
   }
   .Game-footer {
-    margin-top: 28rem;
+    margin-top: 27.5rem;
   }
 }
