--- a/src/app/App.css
+++ b/src/app/App.css
@@ -7,6 +7,14 @@ button:focus {
   outline: none;
 }
 
+.App {
+  overflow: hidden;
+  font-size: 1.5rem;
+  letter-spacing: 0.05rem;
+  font-family: "Chelsea Market", cursive;
+}
+
+/* Buttons */
 .button {
   color: #fff;
   font-family: "Balsamiq Sans", cursive;
@@ -28,13 +36,24 @@ button:focus {
   background-color: #e45465;
 }
 
-.App {
-  overflow: hidden;
-  font-size: 1.5rem;
-  letter-spacing: 0.05rem;
-  font-family: "Chelsea Market", cursive;
+/* Content Container */
+.content::before {
+  background-image: url("./separator4.png");
+  background-repeat: repeat-x;
+  background-size: auto 4rem;
+  content: "";
+  position: absolute;
+  margin-top: -4rem;
+  height: 4rem;
+  width: 100%;
+  z-index: -10;
 }
 
+.content {
+  background-color: #80bbdc;
+}
+
+/* Navbar */
 .navbar {
   text-align: center;
 }
@@ -67,6 +86,7 @@ button:focus {
   color: #c5243a !important;
 }
 
+/* Page Elements */
 .page-header {
   color: rgba(0, 0, 0, 0.8);
   font-size: 5rem;
@@ -91,6 +111,12 @@ button:focus {
 
 /* Small devices (landscape phones, 576px and up) */
 @media (min-width: 576px) {
+  .content::before {
+    background-size: auto 5rem;
+    background-position: top left;
+    margin-top: -5rem;
+    height: 5rem;
+  }
   .page-header {
     margin-top: 4rem;
     margin-bottom: 10rem;
@@ -99,6 +125,11 @@ button:focus {
 
 /* Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) {
+  .content::before {
+    background-size: auto 6rem;
+    margin-top: -6rem;
+    height: 6rem;
+  }
   .page-header {
     font-size: 6rem;
     margin-top: 4rem;
@@ -113,8 +144,18 @@ button:focus {
     margin-top: 5rem;
     margin-bottom: 15rem;
   }
+  .content::before {
+    background-size: auto 8rem;
+    margin-top: -7.95rem;
+    height: 8rem;
+  }
 }
 
 /* Extra large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) {
+  .content::before {
+    background-size: auto 10rem;
+    margin-top: -9.95rem;
+    height: 10rem;
+  }
 }
