--- a/src/activities/Activities.css
+++ b/src/activities/Activities.css
@@ -2,14 +2,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 2rem;
 }
 
 .Activity-preview {
   height: 250px;
   width: 250px;
-  border-radius: 50%;
-  background-color: white;
   z-index: 20;
 }
 
@@ -27,4 +24,11 @@
   font-size: 7rem;
   text-shadow: 0.1rem 0.1rem rgba(0, 0, 0, 0.7);
   font-family: "Love Ya Like A Sister", cursive;
+}
+
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) {
+  .Activities {
+    margin-top: 4rem;
+  }
 }
