--- a/src/app/App.css
+++ b/src/app/App.css
@@ -126,6 +126,9 @@ button:focus {
 
 /* Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) {
+  .button {
+    margin-bottom: 7rem;
+  }
   .content::before {
     background-size: auto 6rem;
     margin-top: -6rem;
