--- a/src/showcase/Showcase.css
+++ b/src/showcase/Showcase.css
@@ -2,10 +2,17 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-  margin-top: 5rem;
+  margin-top: 4rem;
 }
 
 .Showcase-book {
   width: 350px;
   box-shadow: 0px 0px 30px rgb(0, 0, 0, 0.5);
+}
+
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) {
+  .Showcase {
+    margin-top: 11rem;
+  }
 }
