--- a/src/about/About.css
+++ b/src/about/About.css
@@ -1,26 +1,7 @@
-.About-content::before {
-  background-image: url("./separator.png");
-  background-repeat: repeat-x;
-  content: "";
-  position: absolute;
-  margin-top: -315px;
-  height: 415px;
-  width: 100%;
-  z-index: -1;
-}
-
-.About-content {
-  background-color: #80bbdc;
-  margin-top: 155px;
-  background-position: bottom center;
-  background-size: auto 800px;
-  background-repeat: repeat-x;
-  padding-bottom: 37rem;
-}
-
 .About-img,
 .About-text {
-  margin: 2rem 0;
+  margin-top: 4rem;
+  margin-bottom: 2rem;
 }
 
 .About-img {
