--- a/src/characters/Characters.css
+++ b/src/characters/Characters.css
@@ -1,10 +1,8 @@
-.character-name {
-  color: #1c597c;
-  font-size: 5rem;
-  letter-spacing: 0.1rem;
-  line-height: 1;
-  margin-bottom: 1rem;
-  font-family: "Londrina Solid", cursive;
+.character-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
 }
 
 .character-image {
@@ -12,9 +10,22 @@
   max-width: 300px;
 }
 
-.character-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
+.character-name {
+  color: #1c597c;
+  font-size: 4rem;
+  letter-spacing: 0.1rem;
+  line-height: 1;
+  margin-bottom: 1rem;
+  font-family: "Londrina Solid", cursive;
+}
+
+.character-description {
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
+}
+
+/* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) {
+  .character-name {
+    font-size: 5rem;
+  }
 }
