--- a/src/about/About.css
+++ b/src/about/About.css
@@ -1,6 +1,7 @@
+/* About Elements */
 .About-img,
 .About-text {
-  margin-top: 4rem;
+  margin-top: 2rem;
   margin-bottom: 2rem;
 }
 
@@ -10,4 +11,65 @@
 
 .About-text {
   text-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
+}
+
+.About-content {
+  padding-bottom: 8rem;
+}
+
+/* Footer */
+.About-footer::before {
+  background-color: #80bbdc;
+  background-image: url("./zowen-footer.png");
+  background-repeat: repeat-x;
+  background-position: center;
+  background-size: auto 10rem;
+  content: "";
+  position: absolute;
+  margin-top: -8rem;
+  height: 10rem;
+  width: 100%;
+}
+
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) {
+  .About-img,
+  .About-text {
+    margin-top: 4rem;
+  }
+  .About-content {
+    padding-bottom: 10rem;
+  }
+  .About-footer::before {
+    background-size: auto 12rem;
+    margin-top: -9.5rem;
+    height: 12rem;
+  }
+}
+
+/* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) {
+  .character-name {
+    font-size: 5rem;
+  }
+  .About-content {
+    padding-bottom: 14rem;
+  }
+  .About-footer::before {
+    background-size: auto 15rem;
+    margin-top: -12rem;
+    height: 15rem;
+  }
+}
+
+/* Extra large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {
+  .About-content {
+    padding-bottom: 19rem;
+  }
+  .About-footer::before {
+    background-size: auto 20rem;
+    margin-top: -17rem;
+    height: 20rem;
+  }
 }
