--- a/src/characters/Characters.css
+++ b/src/characters/Characters.css
@@ -1,3 +1,8 @@
+.Characters-content {
+  padding-bottom: 10rem;
+}
+
+/* Character Elements */
 .character-container {
   display: flex;
   flex-direction: column;
@@ -8,6 +13,7 @@
 .character-image {
   height: 300px;
   max-width: 300px;
+  margin-top: 2rem;
 }
 
 .character-name {
@@ -23,9 +29,58 @@
   text-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
 }
 
+/* Footer */
+.Characters-footer::before {
+  background-color: #80bbdc;
+  background-image: url("./zowen-footer.png");
+  background-repeat: repeat-x;
+  background-position: center;
+  background-size: auto 10rem;
+  content: "";
+  position: absolute;
+  margin-top: -8rem;
+  height: 10rem;
+  width: 100%;
+}
+
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) {
+  .character-image {
+    margin-top: 4rem;
+  }
+  .Characters-content {
+    padding-bottom: 14rem;
+  }
+  .Characters-footer::before {
+    background-size: auto 12rem;
+    margin-top: -9.5rem;
+    height: 12rem;
+  }
+}
+
 /* Large devices (desktops, 992px and up) */
 @media (min-width: 992px) {
   .character-name {
     font-size: 5rem;
+  }
+  .Characters-content {
+    padding-bottom: 16rem;
+  }
+  .Characters-footer::before {
+    background-size: auto 15rem;
+    margin-top: -12rem;
+    height: 15rem;
+  }
+}
+
+/* Extra large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {
+  .Characters-content {
+    padding-bottom: 21rem;
+  }
+  .Characters-footer::before {
+    background-size: auto 20rem;
+    margin-top: -17rem;
+    height: 20rem;
   }
 }
