--- a/src/books/Books.css
+++ b/src/books/Books.css
@@ -34,9 +34,13 @@
   box-shadow: 0px 0px 30px rgb(0, 0, 0, 0.5);
 }
 
+.Book-title-container {
+  text-align: center;
+}
+
 .Book-title {
   color: #1c597c;
-  font-size: 5rem;
+  font-size: 4rem;
   letter-spacing: 0.1rem;
   line-height: 1;
   margin-bottom: 1rem;
@@ -82,6 +86,12 @@
 
 /* Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) {
+  .Book-title-container {
+    text-align: left;
+  }
+  .Book-title {
+    font-size: 5rem;
+  }
 }
 
 /* Large devices (desktops, 992px and up) */
